Repaired small layout issue.

--- a/src/tailwind/critical.scss
+++ b/src/tailwind/critical.scss
@@ -17,7 +17,7 @@
 @layer base {
   header {
     @apply font-bold leading-6 text-sm sm:text-base ;
-    @apply flex flex-col gap-y-4 lg:flex-row justify-between lg:items-center mt-10 sm:mt-10 md:mt-10 lg:mt-10;
+    @apply flex flex-col gap-y-4 lg:flex-row justify-between lg:items-center my-6 sm:my-8 md:my-10 lg:my-16 xl:my-20;
 
     .logo {
       @apply link link-primary link-hover;
